syntax = "proto3";

package server;

import "AtomicResult.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetWorkUpdatesResponseProto";

message GetWorkUpdatesResponse {
    repeated tests.AtomicResult results = 1;
    bool hasCompleted = 2;
    int64 lastUpdatedTimestamp = 3;
}
